--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
   "devDependencies": {
     "should": "~3.0.1",
     "gulp-flatten": "0.0.2",
-    "gulp": "~3.4.1",
     "gulp-less": "~1.1.10",
     "mocha": "~1.17.0",
     "gulp-uglify": "~0.1.0",
@@ -28,6 +27,7 @@
     "gulp-livereload": "~0.2.0",
     "tiny-lr": "0.0.5",
     "express": "~3.4.8",
-    "pre-commit": "0.0.4"
+    "pre-commit": "0.0.4",
+    "gulp": "^3.5.6"
   }
 }
