--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "tiny-lr": "0.0.5",
     "express": "~3.4.8",
     "pre-commit": "0.0.4",
-    "gulp": "^3.5.6"
+    "gulp": "^3.5.6",
+    "gulp-if": "0.0.5",
+    "gulp-minify-css": "^0.3.0"
   }
 }
