precommit now runs gulp in PROD mode

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "private": true,
   "scripts": {
-    "gulp": "gulp"
+    "gulp": "PROD=true gulp"
   },
   "pre-commit": [
     "gulp"
