--- a/package.json
+++ b/package.json
@@ -17,19 +17,19 @@
   "author": "Artem Medeusheyev <artem.medeusheyev@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "should": "~3.0.1",
-    "gulp-flatten": "0.0.2",
-    "gulp-less": "~1.1.10",
-    "mocha": "~1.17.0",
-    "gulp-uglify": "~0.1.0",
-    "rimraf": "~2.2.6",
-    "gulp-jade": "~0.3.0",
-    "gulp-livereload": "~0.2.0",
-    "tiny-lr": "0.0.5",
-    "express": "~3.4.8",
     "pre-commit": "0.0.4",
-    "gulp": "^3.5.6",
+    "rimraf": "^2.2.6",
+    "should": "^3.2.0-beta1",
     "gulp-if": "0.0.5",
-    "gulp-minify-css": "^0.3.0"
+    "mocha": "^1.18.2",
+    "tiny-lr": "0.0.5",
+    "gulp-livereload": "^1.2.0",
+    "gulp-minify-css": "^0.3.0",
+    "gulp-less": "^1.2.3",
+    "gulp": "^3.5.6",
+    "gulp-flatten": "0.0.2",
+    "gulp-jade": "^0.4.2",
+    "gulp-uglify": "^0.2.1",
+    "express": "^3.5.0"
   }
 }
