--- a/package.json
+++ b/package.json
@@ -30,6 +30,10 @@
     "gulp-flatten": "0.0.2",
     "gulp-jade": "^0.4.2",
     "gulp-uglify": "^0.2.1",
-    "express": "^3.5.0"
+    "express": "^3.5.0",
+    "gulp-rename": "^1.2.0",
+    "browserify": "^3.33.0",
+    "through2": "^0.4.1",
+    "gulp-streamify": "0.0.4"
   }
 }
